--- a/_config.yaml
+++ b/_config.yaml
@@ -1,5 +1,5 @@
 # site properties and page defaults
-title: GlobalKnowledgeObservatory
+title: The Global Knowledge Observatory
 subtitle: 
 description: An engaging 1-3 sentence description of your lab.
 header: images/background.jpg
@@ -8,7 +8,7 @@ proofer: false
 
 # site social media and other links
 links:
-  email: contact@GlobalKnowledgeObservatory.com
+  email: GlobalKnowledgeObservatory@gmail.com
   orcid: 0000-0001-8713-9213
   google-scholar: ETJoidYAAAAJ
   github: GlobalKnowledgeObservatory
